--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -116,11 +116,15 @@ When using the reselect post processor,
 you should make sure to run Debezium close to your database,
 in order to minimize the latency impact.
 
+Issuing a database query for getting the current value of a TOAST-ed column isn't ideal.
+Rather, we'd want to retrieve the column value exactly as it was when that update happened, ideally also offloading these look-ups to a separate system.
+This kind of processing is a prime use case for stateful stream processors such as https://flink.apache.org/[Apache Flink].
+So let's explore how we could implement TOAST column backfills using Flink.
+
+image::toast_backfill_flink.png[Backfilling TOAST column values with stateful stream processing]
+
 ## Flink DataStream API
 
-As discussed above, issuing a database query for getting the current value of a TOAST-ed column suffers from data races.
-What we'd actually have to do when emitting an update change event is retrieve the column value as it was when that update happened.
-This kind of processing is a prime use case for stateful stream processors such as https://flink.apache.org/[Apache Flink].
 Flink supports several APIs for implementing stream processing jobs which differ in terms of their complexity and the capabilities they offer.
 The https://nightlies.apache.org/flink/flink-docs-master/docs/dev/datastream/overview/[DataStream API] is a foundational API which provides you with the highest degree of freedom and flexibility,
 at the same time it has a steep learning curve and you can shoot into your own foot easily.
@@ -458,4 +462,4 @@ using Flink's mini-cluster deployment mode.
 I've logged issue https://issues.redhat.com/browse/DBZ-9078[DBZ-9078] for exploring this further;
 please reach out if this sounds interesting to you!
 
-_Many thanks to Andrew Sellers and Steffen Hausmann for their feedback while writing this post!_
+_Many thanks to Andrew Sellers, Renato Mefi, and Steffen Hausmann for their feedback while writing this post!_
