--- a/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
+++ b/content/blog/backfilling-postgres-toast-columns-debezium-change-events.asciidoc
@@ -146,7 +146,7 @@ public class ToastBackfillFunction extends
   private ValueStateDescriptor<String> descriptor; // <2>
 
   public ToastBackfillFunction(String columnName) {
-    this.columnName = olumnName;
+    this.columnName = columnName;
   }
 
   @Override
