--- a/content/ai/index.asciidoc
+++ b/content/ai/index.asciidoc
@@ -31,7 +31,7 @@ Here is how I am using AI:
 * Validating whether the line of thought of an article is coherent
 * Making suggestions for article titles and teasers, which I rework substantially to focus on the right thing and match my personal voice
 
-== What I Use AI Not For
+== What I Do Not Use AI For
 
 * Original writing in any form
 * Creating complete paragraphs or sections
