--- a/content/ai/index.asciidoc
+++ b/content/ai/index.asciidoc
@@ -6,28 +6,23 @@ type: "page"
 markup: adoc
 ---
 
-**TL, DR:** I don't let AI write articles for me. I am using AI occassionally to improve my own original writing,
-similar to how you'd work with a human copy editor.
-
-+++<del>In the time and age of AI...</del>+++
-Just kidding, this page has not been written using LLMs or any other AI tooling.
-This is an important topic though, and I want to be transparent about how I use (and more importantly, don't use) AI for writing this blog.
-
 When you read a post on this site, you can be sure it is an original article, written by a human: me.
-My goal is to share unique (in any case, personal) and hopefully innovative perspectives, based on my own work and experience.
-I don't think there's any point in publishing an article written by an LLM.
-After all, you could just run ChatGPT or Claude, or any other AI asisstant yourself in order to do so.
-It's empty calories, just like fast food: you are digesting it, but there's no real value to it.
+
+My goal is to share unique (in any case, personal), and hopefully innovative perspectives, based on my own work and experience.
+Large language models (LLMs) are not going to give you that.
+I don't see much value in publishing articles written by an LLM;
+after all, you could just run ChatGPT or Claude by yourself in order to do so.
 
 This is not to say I am not working with AI in the process of writing at all.
-I am using it occassionally, helping me with certain tasks to improve articles, once I have a draft.
-The scope of this are light-touch changes, affecting a few handful of words in an article.
+I am using AI occassionally, similar to working with a human copy editor,
+helping me to improve articles, once I have a draft.
+The scope of this are light-touch changes, affecting a few handful of words.
 Here is how I am using AI:
 
 == What I Use AI For
 
 * Checking for correct grammar and wording
-* Making suggestions for improving the expressiveness of my language; being a non-native English speaker, I like for instance finding new words to add variety. Case in point: I tend to overuse the word "use", and AI helps to find alternatives
+* Making suggestions for improving the expressiveness of my language; being a non-native English speaker, I like for instance finding new words to add variety. Case in point: I tend to overuse the word "use" (just check this page ;), and AI helps to find alternatives
 * Validating whether the line of thought of an article is coherent
 * Making suggestions for article titles and teasers, which I rework substantially to focus on the right thing and match my personal voice
 
