Updating output of pg_create_logical_replication_slot() call

--- a/content/blog/mastering-postgres-replication-slots.asciidoc
+++ b/content/blog/mastering-postgres-replication-slots.asciidoc
@@ -35,9 +35,11 @@ call the https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-
 ----
 SELECT * FROM pg_create_logical_replication_slot('my_slot', 'pgoutput');
 
-slot_name    |    lsn
--------------+-----------
-my_slot      | 0/15AF761
++-----------+-----------+
+| slot_name | lsn       |
+|-----------+-----------|
+| my_slot   | 0/15AF761 |
++-----------+-----------+
 ----
 
 [NOTE]
