--- a/content/blog/postgres-replication-slots-confirmed-flush-lsn-vs-restart-lsn.asciidoc
+++ b/content/blog/postgres-replication-slots-confirmed-flush-lsn-vs-restart-lsn.asciidoc
@@ -27,7 +27,8 @@ It also shows the `restart_lsn` and `confirmed_flush_lsn` of each slot:
 ----
 SELECT
   slot_name, plugin, restart_lsn, confirmed_flush_lsn
-FROM pg_replication_slots;
+FROM
+  pg_replication_slots;
 +----------------+---------------+-------------+---------------------+
 | slot_name      | plugin        | restart_lsn | confirmed_flush_lsn |
 |----------------+---------------+-------------+---------------------|
@@ -118,8 +119,9 @@ The slot's `confirmed_flush_lsn` is the last consumed LSN, `0/1DDF780`, automati
 [source,sql,linenums=true]
 ----
 SELECT
-    slot_name, plugin, restart_lsn, confirmed_flush_lsn
- FROM pg_replication_slots;
+  slot_name, plugin, restart_lsn, confirmed_flush_lsn
+FROM
+  pg_replication_slots;
 +----------------+---------------+-------------+---------------------+
 | slot_name      | plugin        | restart_lsn | confirmed_flush_lsn |
 |----------------+---------------+-------------+---------------------|
