--- a/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
+++ b/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
@@ -1,5 +1,5 @@
 ---
-title: "Let's Take a Look at... Lower Tail Latencies With ZGC"
+title: "Let's Take a Look at... Lower Java Tail Latencies With ZGC"
 date: 2025-09-17T17:09:00+02:00
 draft: false
 markup: adoc
