--- a/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
+++ b/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
@@ -118,7 +118,8 @@ By moving all the heavy lifting to separate GC threads, large tail latencies due
 making the Java platform a compelling choice also for workloads for which it historically may not have been considered.
 
 If you haven't looked at ZGC before, now may be a great time to do so:
-Java 25 is the first release with LTS support which includes Generational ZGC,
+Java 25 is the first release with LTS support which includes Generational ZGC as the one and only form of this collector
+(Java 21 also shipped generational support for ZGC, but it had to be enabled via a bespoke JVM option),
 yielding https://openjdk.org/jeps/439[significant improvements] in regards to throughput and tail latencies over Java 17's single generation ZGC implementation.
 
 [NOTE]
