--- a/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
+++ b/content/blog/lower-java-tail-latencies-with-zgc.asciidoc
@@ -39,7 +39,7 @@ So arguably, in most cases the performance with default settings matters more th
 
 I started by benchmarking a https://github.com/gunnarmorling/zgc-test[sample microservice] built using the https://quarkus.io/[Quarkus] framework,
 returning some data from a Postgres database.
-Using https://github.com/tsenart/vegeta[Vegata] as a load generator, 
+Using https://github.com/tsenart/vegeta[Vegeta] as a load generator, 
 I created a moderate load of 1,000 requests per second.
 The test ran on a Hetzner CCX43 instance, using four of its 16 exclusive CPU cores and four GB of RAM.
 Here are the request latencies from running the test for two minutes with each collector, discarding the first 30 seconds of each run to exclude any warm-up effects.
