--- a/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
+++ b/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
@@ -20,13 +20,13 @@ The thing is, I feel all these articles kinda miss the point; Postgres and Kafka
 
 So what's the argument of the "You Don't Need Kafka, Just Use Postgres" posts? Typically, they argue that Kafka is hard to run or expensive to run, or a combination thereof. When you don't have "big data", this cost may not be justified. And if you already have Postgres as a database in your tech stack, why not keep using this, instead of adding yet another technology? 
 
-Usually, these posts then go on to show how to use `SELECT \... FOR UPDATE SKIP LOCKED` for building a… job queue. Which is where things already start to make a bit less sense to me. The reason being that queuing just is not a typical use case for Kafka to begin with. It requires message-level consumer parallelism, as well as the ability to acknowledge individual messages, something Kafka historically has not supported. Now, the Kafka community actually is working towards queue support via https://www.morling.dev/blog/kip-932-queues-for-kafka/[KIP-932], but this is not quite ready for primetime yet. Until then, the argument boils down to not use Kafka for something it has not been designed for in the first place. Hm, yeah, ok?
+Usually, these posts then go on to show how to use `SELECT \... FOR UPDATE SKIP LOCKED` for building a… job queue. Which is where things already start to make a bit less sense to me. The reason being that queuing just is not a typical use case for Kafka to begin with. It requires message-level consumer parallelism, as well as the ability to acknowledge individual messages, something Kafka historically has not supported. Now, the Kafka community actually is working towards queue support via KIP-932, but this is not quite ready for primetime yet (I took a https://www.morling.dev/blog/kip-932-queues-for-kafka/[look at that KIP] earlier this year). Until then, the argument boils down to not use Kafka for something it has not been designed for in the first place. Hm, yeah, ok?
 
 That being said, building a robust queue on top of Postgres is actually harder than it may sound. Long-running transactions by queue consumers can cause MVCC bloat and WAL pile-up; Postgres' vacuum process not being able to keep up with the rate of changes can quickly https://lobste.rs/s/oj3ce4/kafka_is_fast_i_ll_use_postgres#c_dvehfa[become a problem] for this use case. So if you want to go down that path, make sure to run representative performance tests, for a sustained period of time. You won't find out about issues like this by running two minute tests.
 
 So let's actually take a closer look at the "small scale" argument, as in "with such a low data volume, you just can use Postgres". But to use it for what exactly? What is the problem you are trying to solve? After all, Postgres and Kafka are tools designed for addressing specific use cases. One is a database, the other is an event streaming platform. Without knowing and talking about what one actually wants to achieve, the conversation boils down to "I like this tool better than that" and is pretty meaningless.
 
-Kafka enables a wide range of use cases such as microservices communication and data exchange, ingesting IoT sensor data, click streams, or metrics, log processing and aggregation, low-latency data pipelines between operational databases and data lakes/warehouses, or realtime stream processing, for instance for fraud detection and recommendation systems.
+Kafka enables a wide range of use cases such as microservices communication and data exchange, ingesting IoT sensor data, click streams, or metrics, log processing and aggregation, low-latency data pipelines between operational databases and data lakes/warehouses, and realtime stream processing, for instance for fraud detection and recommendation systems.
 
 So if you have one of those use cases, but at a small scale (low volume of data), could you then use Postgres instead of Kafka? And if so, does it make sense? To answer this, you need to consider the capabilities and features you get from Kafka which make it such a good fit for these applications. And while scalability indeed is one of Kafka's core characteristics, it has many other traits which make it very attractive for event streaming applications:
 
