--- a/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
+++ b/content/blog/you-dont-need-kafka-just-use-postgres-considered-harmful.asciidoc
@@ -60,6 +60,6 @@ This approach also has the benefit of decoupling (and protecting) your operation
 
 What about the operational overhead then? While this definitely warrants consideration, I believe that oftentimes that concern is overblown. Running Kafka for small data sets really isn't that hard. With the https://kafka.apache.org/documentation/#zk2kraft-summary[move from ZooKeeper to KRaft mode], running a single Kafka instance is trivial for scenarios not requiring fault tolerance. Managed services make running Kafka a very uneventful experience (pun intended) and should be the first choice, in particular when setting out with low scale use cases. Cost will be manageable kinda by definition by virtue of having a low volume of data. Plus, the time and effort for solving all the issues with a custom implementation discussed above should be part of the TCO consideration to be useful.
 
-So yes, if you want to make it to the front page of HackerNews, arguing that "Postgres is enough" may get you there; but if you actually want to solve your real-world problems in an effective and robust way, use the right tool for the job.
+So yes, if you want to make it to the front page of HackerNews, arguing that "Postgres is enough" may get you there; but if you actually want to solve your real-world problems in an effective and robust way, make sure to understand the sweet spots and limitations of your tools and use the right one for the job.
 
 _Gunnar Morling is an open-source software engineer in the Java and data streaming space. He currently works as a Technologist at Confluent. In his past role at Decodable he focused on developer outreach and helped them build their stream processing platform based on Apache Flink. Prior to that, he spent ten years at Red Hat, where he led the Debezium project, a platform for change data capture._
