Adding short bio to post footer

--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -6,7 +6,7 @@ type: "page"
 markup: adoc
 ---
 
-I am an open-source software engineer in the Java and data streaming space. I currently work as a Technologist at https://www.confluent.io/[Confluent].
+I am an open-source software engineer in the Java and data streaming space. I currently work as a Technologist for https://www.confluent.io/[Confluent].
 In my past role at Decodable I focused on developer outreach and helped them build their stream processing platform based on Apache Flink.
 Prior to that, I spent ten years at Red Hat, where I led the Debezium project, a platform for change data capture.
 
