--- a/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
+++ b/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
@@ -546,7 +546,7 @@ You could think of it as a persistent implementation of the https://en.wikipedia
 As demonstrated in this post and the accompanying https://github.com/gunnarmorling/persistasaurus[source code],
 it doesn't take too much work to create a functioning PoC for a DE engine.
 Of course, it's still quite a way to go from there to a system you'd actually want to put into production.
-At the persistence level, you'd have to address aspects such as  fault tolerance and HA.
+At the persistence level, you'd have to address aspects such as (horizontal) scalability, fault tolerance and HA.
 The engine should support things such as retrying failing steps with exponential back-off,
 parallel execution of workflow steps,
 throttling flow executions, compensation steps for implementing Sagas, and more.
