--- a/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
+++ b/content/blog/building-durable-execution-engine-with-sqlite.asciidoc
@@ -185,7 +185,7 @@ CREATE TABLE IF NOT EXISTS execution_log (
 <9> The serialized form of the step's input parameters, if any
 <10> The serialized form of the step's result, if any
 
-This log table contains all information needed to capture execution intent and persist results.
+This log table stores all information needed to capture execution intent and persist results.
 More details on the notion of delays and signals follow further down.
 
 When running a flow, the engine needs to know when a given step gets executed so it can be logged.
@@ -305,7 +305,7 @@ it may  be a good idea to add idempotency keys to the requests,
 which lets the invoked services detect and ignore duplicate calls.
 
 The actual execution log implementation isn't that interesting, you can find its source code https://github.com/gunnarmorling/persistasaurus/blob/main/src/main/java/dev/morling/persistasaurus/internal/ExecutionLog.java[here].
-All it does is persisting step invocations and their status in the `execution_log` SQLite table shown above.
+All it does is persist step invocations and their status in the `execution_log` SQLite table shown above.
 
 == Delayed Executions
 
