--- a/content/blog/on-idempotency-keys.asciidoc
+++ b/content/blog/on-idempotency-keys.asciidoc
@@ -25,7 +25,7 @@ In addition, it stores the idempotency key of the message. Critically, these two
 
 So let's discuss what makes for a good idempotency key then. One possible option would be to use a UUIDv4. These random identifiers solve the requirement of uniquely identifying each message. However, they require the consumer to store the UUIDs of all the previous messages it ever has received in order to reliably identify a duplicate. Depending on the message volume, this may not be practical. Pragmatically, you might get away with discarding received UUIDs after some time period, if it is acceptable to occasionally receive and process a duplicate after that period. Unfortunately, neither the producer of the message nor the consumer will have any indication of the duplicated processing in that case.
 
-We can somewhat improve this situation by adding a timestamp to the idempotency key, for instance by using a https://en.wikipedia.org/wiki/Universally_unique_identifier#Version_7_\(timestamp_and_random\[UUIDv7]) which contains both a timestamp part (first 48 bits) and a random part (remaining bits), or an https://github.com/ulid/spec[ULID]. That way, the consumer can detect when it receives a message with an idempotency key which is “too old”. While it can't decide whether the message is a duplicate or not, it can flag to the producer that it can't handle that message. It is then upon the producer to decide how to proceed. For instance, if the message is part of a payment flow, the system might suggest to the user to first check in their banking account whether this payment has already been executed or not. Only if that's not the case, a _new_ message with the same payload and a fresh UUID would be sent.
+We can somewhat improve this situation by adding a timestamp to the idempotency key, for instance by using a https://en.wikipedia.org/wiki/Universally_unique_identifier#Version_7_(timestamp_and_random)[UUIDv7] which contains both a timestamp part (first 48 bits) and a random part (remaining bits), or an https://github.com/ulid/spec[ULID]. That way, the consumer can detect when it receives a message with an idempotency key which is "too old". While it can't decide whether the message is a duplicate or not, it can flag to the producer that it can't handle that message. It is then upon the producer to decide how to proceed. For instance, if the message is part of a payment flow, the system might suggest to the user to first check in their banking account whether this payment has already been executed or not. Only if that's not the case, a _new_ message with the same payload and a fresh UUID would be sent.
 
 == Monotonically Increasing Sequences
 
